﻿2012-11-22 Nicole Cordes <cordes@cps-it.de>

* Added fallback for empty sendername in emails to the email address (before setting it to "powermail")

2012-10-05 Nicole Cordes <cordes@cps-it.de>

	* Added new static template for helper CSS (info icon, error message, date picker)
	* Fixed Bug #39807: Text truncation if special character is found (Thanks to Thorsten Schneider)

2012-10-04 Nicole Cordes <cordes@cps-it.de>

	* Fixed Backend Module to work as global installed extension

2012-09-13 Nicole Cordes <cordes@cps-it.de>

	* Fixed piVars initialisation when going back from error page
	* Added new option to send empty values (and markers) in emails
	* Fixed labels.allowTags at is was broken due to security update
	* Force absolute links in email texts
	* Cleaned up static/pi1/setup.txt
	* Added Feature #40874: bold tag (<b>) inside class.tx_powermail_mandatory.php (Thanks to Simon)
	* Fixed Bug #40071: Export mails: no codepage set (Thanks to Christian Hennecke)

2012-08-18 Nicole Cordes <cordes@cps-it.de>

	* Removed support for TYPO3 versions lower than TYPO3 4.5
	* Fixed deprecated function to support greater TYPO3 6.0

2012-08-10 Nicole Cordes <cordes@cps-it.de>

	* Added feature to disable mail storage with empty plugin or typoscript setting
	* Added security fix of version 1.6.9
	* Added constants for date selectors and trigger icon

2012-07-13 Nicole Cordes <cordes@cps-it.de>

	* Fixed Task #37630: Remove require_once functions
	* Fixed Bug #37853: Error code in ext:powermail/pi1/class.tx_powermail_mandatory.php (Thanks to Rabehasy)

2012-06-29  Alexander Grein <alexander.grein@typovision.de>

	* Fixed Bug in export (HTML/CSV/EXCEL) which mixed up values in different columns

2012-06-29  Nicole Cordes <cordes@cps-it.de>

	* Revised constants categories and subcategories
	* Added new option to select to scroll to the first error on a form (plugin.powermail.js.scrollToError)

2012-06-28  Nicole Cordes <cordes@cps-it.de>
