@@ -1,6 +1,7 @@
 ﻿2012-11-22 Nicole Cordes <cordes@cps-it.de>
 
-* Added fallback for empty sendername in emails to the email address (before setting it to "powermail")
+	* Added fallback for empty sendername in emails to the email address (before setting it to "powermail")
+	* Fixed Bug #42711: Mime-type for powerpoint is wrong (Thanks to Chris Mueller)
 
 2012-10-05 Nicole Cordes <cordes@cps-it.de>
 
